fix(notifications): long link overflow in notification content (#7362)

--- a/src/common/notifications/components/Excerpt.less
+++ b/src/common/notifications/components/Excerpt.less
@@ -10,5 +10,7 @@
         padding: 0 0 0 6px;
         border-left: 2px solid var(--neutral-grey-5);
         color: var(--neutral-grey-5);
+        word-break: break-word;
+        overflow-wrap: break-word;
     }
 }
